--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -37,5 +37,6 @@ $kmt-primary-foreground-color: $color-indigo !default;
 // Control backgrounds (control bar, big play, menus)
 $kmt-primary-background-color: #fff !default;
 $kmt-primary-background-transparency: 0.9 !default;
-$kmt-primary-box-color: $color-indigo !default;
+$kmt-primary-box-color: $color-purple !default;
+$kmt-primary-box-transparency: 1 !default;
 
