--- a/src/css/component/_progress.scss
+++ b/src/css/component/_progress.scss
@@ -16,8 +16,11 @@
   border-radius: 0;
 }
 
-.video-js .vjs-progress-control .vjs-play-progress:after {
-  display: none !important;
+.video-js .vjs-progress-control .vjs-play-progress {
+  &:after,
+  &:before {
+    display: none !important;
+  }
 }
 
 .video-js .vjs-slider-bar.vjs-play-progress {
